Cambios por error
soy tonto.

--- a/5card.html
+++ b/5card.html
@@ -24,9 +24,9 @@
                 <li>
                     A third item
                 </li>
-            </ul>
+            </ul><br><br>
            <section>
-            <a href="">Card Link</a>
+            <a href="">Card Link</a> <br><br><br>
             <a href="">Another Link</a>
            </section>
 
