--- a/2etiquetas.html
+++ b/2etiquetas.html
@@ -1,67 +1,73 @@
 <!DOCTYPE html>
 <html lang="it">
+  <head>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
+    <title>HTML Lesson</title>
 
-<head>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <title>HTML Lesson</title>
+    <style>
+      header {
+        border: 2px solid red;
+      }
 
-  <style>
-    header {
-      border: 2px solid red;
-    }
+      main {
+        border: 2px solid black;
+      }
 
-    main {
-      border: 2px solid black;
-    }
+      section {
+        border: 1px solid grey;
+      }
 
-    section {
-      border: 1px solid grey;
-    }
+      footer {
+        border: 2px solid green;
+      }
+    </style>
+  </head>
 
-    footer {
-      border: 2px solid green;
-    }
-  </style>
-</head>
+  <body>
+    <header>
+      <h1>This is the main title.</h1>
+      <h2>And along with the second title, they are in the header tag.</h2>
+    </header>
 
-<body>
-  <header>
-    This is the main title.
-    <br />
-    And along with the second title, they are in the header tag.
-  </header>
+    <aside>This is an unordered list of links.</aside>
+<ul>
+  <li ><a href="">Link 1</a></li>
+  <li ><a href="">Link 2</a></li>
+  <li ><a href="">Link 3</a></li>
+  <li ><a href="">Link 4</a></li>
+  <li ><a href="">Link 5</a></li>
+</ul>
+    <main>
+      This is the body of the page
 
-  <aside>This is an unordered list of links.</aside>
+      <section>
+        <h3>Inside the body there are some sections.</h3>
+        <br />
+        This is a quotation: Hello world.
+      </section>
 
-  <main>
-    This is the body of the page
+      <section>
+        This is a superscript text: <sup>text</sup>
+        <br />
+        This is a subscript text: <sub>text</sub>
+      </section>
 
-    <section>
-      Inside the body there are some sections.
+      <section>
+        This is an emphasized text: <em>text</em>
+        <br />
+        This is a bold text: <strong>text</strong>
+      </section>
+    </main>
+
+    <footer>
+      <h4>This is the end of the page</h4>
       <br />
-      This is a quotation: Hello world.
-    </section>
-
-    <section>
-      This is a superscript text: text
-      <br />
-      This is a subscript text: text
-    </section>
-
-    <section>
-      This is an emphasized text: text
-      <br />
-      This is a bold text: text
-    </section>
-  </main>
-
-  <footer>
-    This is the end of the page
-    <br />
-    This a paragraph.
-  </footer>
-</body>
-
+      This a paragraph.
+    </footer>
+  </body>
 </html>
