--- a/CSS/Ejercicio 1/1.html
+++ b/CSS/Ejercicio 1/1.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" href="1.css">
 </head>
 <body>
-	<h1>Welcome to CSS Basics Exercise</h1>
-	<p>This is a paragraph</p>
+	<h1>WEJERCICIO Nº1</h1>
+	<p>Probando, probando, probando</p>
 </body>
 </html>
